# walrus-python

./: .gitignore  CHANGELOG.md  LICENSE.md  Pipfile  README.md  pyproject.toml
.github/workflows/: create-release.yml  python-publish.yml  test.yml
tests/: test_client.py
walrus/: __init__.py  client.py
