[project]
name = "walrus-python"
version = "0.1.0"
description = "Python SDK for Walrus, a decentralized blob storage protocol"
authors = [{ name = "Kevin Ayling", email = "kevin@standardcryptovc.com" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "requests>=2.0.0"
]
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [{ include = "walrus" }]